--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   hooks_riverpod: ^2.5.4
   google_fonts: ^6.2.1
+  flutter_secure_storage: ^9.2.2
+  dio: ^5.7.0
+  provider: ^6.1.2
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/auth_background.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
