--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dio: ^5.7.0
   provider: ^6.1.2
   flutter_dotenv: ^5.2.1
+  flutter_chat_ui: ^1.6.15
+  flutter_chat_types: ^3.6.2
+  socket_io_client: ^3.0.2
 
 dev_dependencies:
   flutter_test:
