--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_chat_ui: ^1.6.15
   flutter_chat_types: ^3.6.2
   socket_io_client: ^3.0.2
+  image_picker: ^1.1.2
+  mime: ^2.0.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
