--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^1.1.2
   mime: ^2.0.0
   http_parser: ^4.0.2
+  html: ^0.15.0
+
 
 dev_dependencies:
   flutter_test:
